--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         src: url("assets/fonts/GoogleSans-Regular.ttf") format("truetype");
         font-weight: 400;
         font-style: normal;
+        font-display: swap;
       }
       /* Italic (400 italic) */
       @font-face {
@@ -38,6 +39,7 @@
         src: url("assets/fonts/GoogleSans-Italic.ttf") format("truetype");
         font-weight: 400;
         font-style: italic;
+        font-display: swap;
       }
       /* Medium (500 normal) */
       @font-face {
@@ -45,6 +47,7 @@
         src: url("assets/fonts/GoogleSans-Medium.ttf") format("truetype");
         font-weight: 500;
         font-style: normal;
+        font-display: swap;
       }
       /* Medium Italic (500 italic) */
       @font-face {
@@ -52,6 +55,7 @@
         src: url("assets/fonts/GoogleSans-MediumItalic.ttf") format("truetype");
         font-weight: 500;
         font-style: italic;
+        font-display: swap;
       }
       /* Bold (700 normal) */
       @font-face {
@@ -59,6 +63,7 @@
         src: url("assets/fonts/GoogleSans-Bold.ttf") format("truetype");
         font-weight: 700;
         font-style: normal;
+        font-display: swap;
       }
       /* Bold Italic (700 italic) */
       @font-face {
@@ -66,6 +71,7 @@
         src: url("assets/fonts/GoogleSans-BoldItalic.ttf") format("truetype");
         font-weight: 700;
         font-style: italic;
+        font-display: swap;
       }
       body {
         margin: 0;
