--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       body {
         margin: 0;
         padding: 0;
-        font-family: GoogleSans;
+        font-family: GoogleSans, Roboto;
+        font-size-adjust: 0.52;
         background-color: var(--color-background);
       }
       .scrollable.no-scroll {
