--- a/index.html
+++ b/index.html
@@ -28,56 +28,49 @@
       /* Regular (400 normal) */
       @font-face {
         font-family: "GoogleSans";
-        src: url("assets/fonts/GoogleSans-Regular.ttf") format("truetype");
+        src: url("/app/assets/fonts/GoogleSans-Regular.ttf") format("truetype");
         font-weight: 400;
         font-style: normal;
-        font-display: swap;
       }
       /* Italic (400 italic) */
       @font-face {
         font-family: "GoogleSans";
-        src: url("assets/fonts/GoogleSans-Italic.ttf") format("truetype");
+        src: url("/app/assets/fonts/GoogleSans-Italic.ttf") format("truetype");
         font-weight: 400;
         font-style: italic;
-        font-display: swap;
       }
       /* Medium (500 normal) */
       @font-face {
         font-family: "GoogleSans";
-        src: url("assets/fonts/GoogleSans-Medium.ttf") format("truetype");
+        src: url("/app/assets/fonts/GoogleSans-Medium.ttf") format("truetype");
         font-weight: 500;
         font-style: normal;
-        font-display: swap;
       }
       /* Medium Italic (500 italic) */
       @font-face {
         font-family: "GoogleSans";
-        src: url("assets/fonts/GoogleSans-MediumItalic.ttf") format("truetype");
+        src: url("/app/assets/fonts/GoogleSans-MediumItalic.ttf") format("truetype");
         font-weight: 500;
         font-style: italic;
-        font-display: swap;
       }
       /* Bold (700 normal) */
       @font-face {
         font-family: "GoogleSans";
-        src: url("assets/fonts/GoogleSans-Bold.ttf") format("truetype");
+        src: url("/app/assets/fonts/GoogleSans-Bold.ttf") format("truetype");
         font-weight: 700;
         font-style: normal;
-        font-display: swap;
       }
       /* Bold Italic (700 italic) */
       @font-face {
         font-family: "GoogleSans";
-        src: url("assets/fonts/GoogleSans-BoldItalic.ttf") format("truetype");
+        src: url("/app/assets/fonts/GoogleSans-BoldItalic.ttf") format("truetype");
         font-weight: 700;
         font-style: italic;
-        font-display: swap;
       }
       body {
         margin: 0;
         padding: 0;
-        font-family: GoogleSans, Roboto;
-        font-size-adjust: 0.52;
+        font-family: GoogleSans;
         background-color: var(--color-background);
       }
       .scrollable.no-scroll {
@@ -290,6 +283,8 @@
       }
       .home > .main {
         width: 100%;
+        padding: 10px 20px;
+        box-sizing: border-box;
       }
       .home > .main > .container {
         width: 100%;
@@ -299,6 +294,116 @@
       }
       .home > .main > .container > .fragment.active {
         display: block;
+      }
+      .home > .main .coll {
+        width: 100%;
+        padding: 8px;
+        box-sizing: border-box;
+        background-color:;
+      }
+      .card {
+        width: 100%;
+        border-radius: 15px;
+        background-color: #f8f9fd;
+        margin-bottom: 20px;
+      }
+      .card-header {
+        width: 100%;
+        padding: 5px;
+        box-sizing: border-box;
+        display: flex;
+      }
+      .card .header-icon {
+        width: 45px;
+        height: 45px;
+        padding: 5px;
+      }
+      .card-header .icon {
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        background-color: #efefef;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .card .header-icon .svg {
+        width: 20px;
+        height: 20px;
+      }
+      .card .header-icon .img {
+        width: 100%;
+        height: 100%;
+      }
+      .card .header-details {
+        flex: 1;
+        height: 45px;
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+      }
+      .card .header-title {
+        display: inline-block;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 0.75em;
+      }
+      .card .header-title span {
+        position: relative;
+        bottom: -0.02em;
+      }
+      .card .header-des {
+        display: inline-block;
+        font-size: 16px;
+        line-height: 0.75em;
+      }
+      .card .header-des span {
+        position: relative;
+        bottom: -0.02em;
+      }
+      .card-main {
+        width: 100%;
+        padding: 5px;
+        box-sizing: border-box;
+      }
+      .card-overview {
+        width: 100%;
+        padding: 5px;
+        box-sizing: border-box;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        line-height: 1.4;
+        overflow: hidden;
+      }
+      .card-footer {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: end;
+      }
+      .card-btn {
+        flex: 1;
+        height: 40px;
+        border-radius: 100px;
+        border: 1px solid;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .card-tag {
+        flex: 1;
+        height: 45px;
+        border-radius: 100px;
+        color: #fff;
+        background-color: #000;
+        margin-left: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     </style>
   </head>
@@ -335,17 +440,105 @@
             </div>
             <div class="main">
               <div class="container">
-                <div class="fragment">
-                  <div style="padding: 10px 28px">
-                    <h2>Tab 1</h2>
-                    <a href="admin/">admin/</a>
+                <div class="fragment coll">
+                  <div class="card">
+                    <div class="card-header">
+                      <div class="header-icon">
+                        <div class="icon">
+                          <div class="svg">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                              <g><path d="M19 2h-1V1a1 1 0 1 0-2 0v1H8V1a1 1 0 1 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h14c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5ZM5 4h14c1.654 0 3 1.346 3 3v1H2V7c0-1.654 1.346-3 3-3Zm14 18H5c-1.654 0-3-1.346-3-3v-9h20v9c0 1.654-1.346 3-3 3Zm0-8a1 1 0 0 1-1 1H6a1 1 0 1 1 0-2h12a1 1 0 0 1 1 1Zm-7 4a1 1 0 0 1-1 1H6a1 1 0 1 1 0-2h5a1 1 0 0 1 1 1Z"></path></g>
+                            </svg>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="header-details">
+                        <div class="header-title">
+                          <span>Sunday</span>
+                        </div>
+                        <div class="header-des">
+                          <span>22-04-2025</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-main">
+                      <div class="card-overview">
+                        <span> ullamco enim est nostrud qui quis reprehenderit officia velit est aute duis do laborum voluptate magna eiusmod minim mollit pariatur mollit dolor ullamco dolore qui sunt cillum cupidatat pariatur laboris </span>
+                      </div>
+                    </div>
+                    <div class="card-footer">
+                      <div class="card-btn">
+                        <span>View Details</span>
+                      </div>
+                      <div class="card-tag">$123</div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-header">
+                      <div class="header-icon">
+                        <div class="icon">
+                          <div class="svg">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                              <g><path d="M19 2h-1V1a1 1 0 1 0-2 0v1H8V1a1 1 0 1 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h14c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5ZM5 4h14c1.654 0 3 1.346 3 3v1H2V7c0-1.654 1.346-3 3-3Zm14 18H5c-1.654 0-3-1.346-3-3v-9h20v9c0 1.654-1.346 3-3 3Zm0-8a1 1 0 0 1-1 1H6a1 1 0 1 1 0-2h12a1 1 0 0 1 1 1Zm-7 4a1 1 0 0 1-1 1H6a1 1 0 1 1 0-2h5a1 1 0 0 1 1 1Z"></path></g>
+                            </svg>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="header-details">
+                        <div class="header-title">
+                          <span>Sunday</span>
+                        </div>
+                        <div class="header-des">
+                          <span>22-04-2025</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-main">
+                      <div class="card-overview">
+                        <span>magna eiusmod minim mollit pariatur mollit dolor ullamco dolore qui sunt cillum cupidatat pariatur laboris </span>
+                      </div>
+                    </div>
+                    <div class="card-footer">
+                      <div class="card-btn">
+                        <span>View Details</span>
+                      </div>
+                      <div class="card-tag">$123</div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-header">
+                      <div class="header-icon">
+                        <div class="icon">
+                          <div class="svg">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                              <g><path d="M19 2h-1V1a1 1 0 1 0-2 0v1H8V1a1 1 0 1 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h14c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5ZM5 4h14c1.654 0 3 1.346 3 3v1H2V7c0-1.654 1.346-3 3-3Zm14 18H5c-1.654 0-3-1.346-3-3v-9h20v9c0 1.654-1.346 3-3 3Zm0-8a1 1 0 0 1-1 1H6a1 1 0 1 1 0-2h12a1 1 0 0 1 1 1Zm-7 4a1 1 0 0 1-1 1H6a1 1 0 1 1 0-2h5a1 1 0 0 1 1 1Z"></path></g>
+                            </svg>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="header-details">
+                        <div class="header-title">
+                          <span>Sunday</span>
+                        </div>
+                        <div class="header-des">
+                          <span>22-04-2025</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-main">
+                      <div class="card-overview">
+                        <span>mollit dolor ullamco dolore qui sunt cillum cupidatat pariatur laboris </span>
+                      </div>
+                    </div>
+                    <div class="card-footer">
+                      <div class="card-btn">
+                        <span>View Details</span>
+                      </div>
+                      <div class="card-tag">$123</div>
+                    </div>
                   </div>
                 </div>
-                <div class="fragment">
-                  <div style="padding: 10px 28px">
-                    <h2>Tab 2</h2>
-                  </div>
-                </div>
+                <div class="fragment exp"></div>
               </div>
             </div>
           </div>
@@ -457,6 +650,49 @@
       </div>
     </div>
     <script type="text/javascript" charset="utf-8">
+      const fetchUser = async user => {
+        const status = { success: false };
+        while (!status.success) {
+          try {
+            const res = await fetch("https://script.google.com/macros/s/AKfycbwEy3EAl_MQqzQ_iYuWdGk1a3AC3Dl-0_clayU3nG7MjiO85yQF_KD9INmJffq-ekxu/exec", {
+              method: "POST",
+              body: JSON.stringify({
+                query: "CHECKUSER",
+                contents: {
+                  query: "CHECK",
+                  user: user
+                }
+              })
+            });
+            status.success = true;
+            const data = await res.json();
+            return data;
+          } catch (err) {
+            await new Promise(resolve => setTimeout(resolve, 3000));
+          }
+        }
+      };
+
+      const rawUser = localStorage.getItem("application.user");
+      const user = rawUser ? JSON.parse(rawUser) : null;
+      if (user && user.auth.isLoggedIn) {
+      } else {
+        window.addEventListener("pageshow", e => {
+          const rawStack = sessionStorage.getItem("application.auth.nav.stack");
+          const stack = rawStack ? JSON.parse(rawStack) : [];
+          if (stack.includes(window.location.pathname)) {
+            const newStack = stack.filter(stack => stack !== location.pathname);
+            if (newStack.length > 0) sessionStorage.setItem("application.auth.nav.stack", JSON.stringify(newStack));
+            else sessionStorage.removeItem("application.auth.nav.stack");
+          }
+          const rawUser = localStorage.getItem("application.user");
+          const user = rawUser ? JSON.parse(rawUser) : null;
+          if (user && user.auth.isLoggedIn) {
+            window.location.reload();
+          }
+        });
+      }
+
       window.addEventListener("DOMContentLoaded", e => {
         const hash = new URL(window.location.href).hash.replace(/^#\/?/, "");
         const parts = hash.split("/").filter(Boolean);
@@ -523,22 +759,6 @@
         }
         if (["home", "search", "updates", "profile"].includes(newParts[0]) && isValidRoute(newParts, validPaths)) {
           const index = ["home", "search", "updates", "profile"].indexOf(newParts[0]);
-          switch (index) {
-            case 0:
-              if (["menu"].includes(newParts[1])) {
-                hamburg.classList.add("active");
-                menu.classList.add("active");
-                document.querySelectorAll(".scrollable").forEach(item => {
-                  item.classList.add("no-scroll");
-                });
-              } else if (["coll", "exp"].includes(newParts[1])) {
-                const index = ["coll", "exp"].indexOf(newParts[1]);
-                sessionStorage.setItem("app[0][1][fragment]", ["coll", "exp"][index]);
-              } else {
-                window.location.hash = "#/home/coll";
-              }
-              break;
-          }
           onCreate(index);
           return;
         }
@@ -609,14 +829,17 @@
           document.querySelectorAll(".scrollable").forEach(item => {
             item.classList.add("no-scroll");
           });
+        } else if (["coll", "exp"].includes(sub)) {
+          const index = ["coll", "exp"].indexOf(sub);
+          switch (index) {
+            case 0:
+              if (!history.state) history.replaceState({}, "", "#/home/coll");
+              break;
+          }
+          sessionStorage.setItem("app[0][1][fragment]", ["coll", "exp"][index]);
         }
         const fragment = sessionStorage.getItem("app[0][1][fragment]") || "coll";
         const index = ["coll", "exp"].indexOf(fragment);
-        switch (index) {
-          case 0:
-            if (!history.state) history.replaceState({}, "", "#/home/coll");
-            break;
-        }
         loadFragment(index);
       }
 
